testsuite/tests/deriving/should_fail/T10684.hs
module A where
import GHC.Generics
data A = A deriving (Show, Generic)
data B = B A deriving (Show)
