testsuite/tests/deriving/should_fail/T10684.stderr

T10684.hs:3:28: error:
    • Can't make a derived instance of ‘Generic A’:
        You need DeriveGeneric to derive an instance for this class
    • In the data declaration for ‘A’
